Setting Java's Max PermGen size for test worker threads to 256m as environment variables don't flow through.  Updated the readme to explicitly state that the environment variables should also be set.